Add jSpecify node.setup package.